fix: blurry background updated, button function no longer repeated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/cartoon-space-background.webp); /* need to fix resolution */
+  background-image: url(../images/Space-Background.jpg); /* need to fix resolution */
   background-size: cover;
   background-position: center;
   display: flex;
